tests/ui/closures/2229_closure_analysis/capture-analysis-2.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/capture-analysis-2.rs:14:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: First Pass analysis includes:
  --> $DIR/capture-analysis-2.rs:17:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let _x = p.x;
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing p[(0, 0)] -> ByValue
  --> $DIR/capture-analysis-2.rs:20:18
   |
LL |         let _x = p.x;
   |                  ^^^
note: Capturing p[] -> ImmBorrow
  --> $DIR/capture-analysis-2.rs:23:26
   |
LL |         println!("{:?}", p);
   |                          ^

error: Min Capture analysis includes:
  --> $DIR/capture-analysis-2.rs:17:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let _x = p.x;
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture p[] -> ByValue
  --> $DIR/capture-analysis-2.rs:20:18
   |
LL |         let _x = p.x;
   |                  ^^^ p[] captured as ByValue here
...
LL |         println!("{:?}", p);
   |                          ^ p[] used here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
